fixed anonymous mailing bug
